--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <p>Just Enter Your Location To Start Relaxing</p>
 
             <div class="container">
-                <span><a id="start" href="#section2" role="button" class="btn btn-outline-light">Get Started</a></span>
-                <span><a href="LearnMore.html" id="learn" role="button" class="btn btn-outline-light">Learn
-                        More</a></span>
+                <a id="start" href="#section2" role="button" class="btn btn-outline-light">Get Started</a>
+                <a href="LearnMore.html" id="learn" role="button" class="btn btn-outline-light">Learn
+                        More</a>
             </div>
 
         </div>
@@ -48,14 +48,17 @@
         <div id="results" class="card">
             <div class="card-body">
                 <div>
-                    <span><button id="getLocation" type="submit" class="btn btn-dark">Get
-                            Location</button></span>
-                    <span><button id="review" type="submit" class="btn btn-dark">Reviews</button></span>
-                </div>
+                    <button id="getLocation" type="submit" class="btn btn-dark">Get
+                            Location</button>
+                    <button id="review" type="submit" class="btn btn-dark">Reviews</button>
+              
 
                 <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
-                    Get a DD! </button>
-
+                    Get a DD!
+                </button>
+            </div>
+                <br>
+                <div id="bar"></div>
                 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
                     aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
