--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div>
                     <span><button id="getLocation" type="submit" class="btn btn-dark">Get
                             Location</button></span>
-                    <span><button id="review" type="submit" class="btn btn-dark">Reviews</button></span>
+                    <span><button id="review" type="submit" class="btn btn-dark">Advice Column</button></span>
                 </div>
 
                 <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
