--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <div class="pour"></div>
             </div>
             <hr class="my-4">
-            <p>Just Enter Your Location To Start Relaxing</p>
+            <p>Ready? Click below and let us know where <br>
+                you are by allowing our use of location services!</p>
 
             <div class="container">
                 <a id="start" href="#section2" role="button" class="btn btn-outline-light">Get Started</a>
@@ -86,7 +87,10 @@
             </div>
 
         </div>
+        <a id="back" role='button' href="#section1" class='btn btn-dark'>Back</a>
+
     </div>
+
     <!--age verifcation modal-->
 
 
