--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <div id=age>
+    <div id='age'>
         <div class="ageWrap ageGateActive">
             <div id="ageGate">
 
@@ -59,35 +59,33 @@
     </div>
     <div id='page'>
         <div id="section1">
-
-            <div class="jumbotron text-white bg-dark">
-                <h1 class="title">Peruse For Brews</h1>
-
-                <p>Ready? Click below and let us know where <br>
-                    you are by allowing our use of location services!</p>
-
-                <div id="container">
-                    <div class="glass">
-                        <div class="beer"></div>
+            
+                <div class="jumbotron text-white bg-dark">
+                    <h1 class="title">Peruse For Brews</h1>
+                    <br>
+                    <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
+                    <br>
+                    <div id="container">
+                        <div class="glass">
+                            <div class="beer"></div>
+                        </div>
+                        <div class="head"></div>
+                        <div class="pour"></div>
                     </div>
-                    <div class="head"></div>
-                    <div class="pour"></div>
-                </div>
-                <hr class="my-4">
-                <p>Ready? Click below and let us know where <br>
-                    you are by allowing our use of location services!</p>
+                    <hr class="my-4">
+                    <h6>Ready? Click Below To Allow Location Services!</h6>
+                    
+                <button id="start" href="#section2" role="button" class="btn btn-outline-light">Get Started</button>
 
-                <div class="container">
-                    <a id="start" href="#section2" role="button" class="btn btn-outline-light">Get Started</a>
-                    <a href="LearnMore.html" id="learn" role="button" class="btn btn-outline-light">Learn
-                        More</a>
-                </div>
-
+             <a id="learn" href="LearnMore.html" role="button" class="btn btn-outline-light">Learn
+                    More</a>
             </div>
-        </div>
-        <br>
-        <br>
 
+        </div>
+
+
+        <br>
+        <br>
         <div id="section2">
             <ul class="bubbles">
                 <li></li>
@@ -191,8 +189,8 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="age.js" ></script>
-    <script src="app.js" ></script>
+    <script src="age.js"></script>
+    <script src="app.js"></script>
 
 
 </body>
