--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <div id='age'>
+    <div class='form-popup' id='age'>
         <div class="ageWrap ageGateActive">
             <div id="ageGate">
 
@@ -51,7 +51,7 @@
                                 <input type="tel" class="ageInput" name="birthYear" id="birthYear" maxlength="4"></li>
                             <li class="errors"></li>
                         </ul>
-                        <input type="submit" name="submit" class="btn" value="I Agree">
+                        <input id="21" display="none" type="submit" name="submit" class="btn" value="I Agree">
                     </form>
                 </div>
             </div>
@@ -59,25 +59,25 @@
     </div>
     <div id='page'>
         <div id="section1">
-            
-                <div class="jumbotron text-white bg-dark">
-                    <h1 class="title">Peruse For Brews</h1>
-                    <br>
-                    <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
-                    <br>
-                    <div id="container">
-                        <div class="glass">
-                            <div class="beer"></div>
-                        </div>
-                        <div class="head"></div>
-                        <div class="pour"></div>
+
+            <div class="jumbotron text-white bg-dark">
+                <h1 class="title">Peruse For Brews</h1>
+                <br>
+                <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
+                <br>
+                <div id="container">
+                    <div class="glass">
+                        <div class="beer"></div>
                     </div>
-                    <hr class="my-4">
-                    <h6>Ready? Click Below To Allow Location Services!</h6>
-                    
+                    <div class="head"></div>
+                    <div class="pour"></div>
+                </div>
+                <hr class="my-4">
+                <h6>Ready? Click Below To Allow Location Services!</h6>
+
                 <button id="start" href="#section2" role="button" class="btn btn-outline-light">Get Started</button>
 
-             <a id="learn" href="LearnMore.html" role="button" class="btn btn-outline-light">Learn
+                <a id="learn" href="LearnMore.html" role="button" class="btn btn-outline-light">Learn
                     More</a>
             </div>
 
@@ -142,6 +142,8 @@
             </ul>
             <!--END of BUBBLES LIST-->
             <div id="results" class="card">
+
+
                 <div class="card-body">
                     <div>
                         <button id="getLocation" type="submit" class="btn btn-dark">Get
@@ -152,42 +154,39 @@
                         </button>
                     </div>
                     <br>
-                    <button id="back" role='button' href="#section1" class='btn btn-dark'>Back</button>
+                    <button id="back" role='button' href="#page" class='btn btn-dark'>Back</button>
+                    <div id="r" class='container'></div>
+
+
+
                 </div>
-
-            </div>
-
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="myModal">Cruise For Brews</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <i class="fab fa-uber" style="font-size: 80px;" href="" class="card-link"
-                                class="card-img-top" alt="..."></i>
-                            <p>Uber</p>
-                            <i class="fas fa-paw"></i>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">No
-                                Thanks!</button>
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="myModal">Cruise For Brews</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <i class="fab fa-uber" style="font-size: 80px;" href="" class="card-link"
+                                    class="card-img-top" alt="..."></i>
+                                <p>Uber</p>
+                                <i class="fas fa-paw"></i>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No
+                                    Thanks!</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
-
-    </div>
-    <!--age verifcation modal-->
-
-
+   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="age.js"></script>
     <script src="app.js"></script>
