--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
         <div id="section1">
 
             <div class="jumbotron text-white bg-dark">
+                <div>
                 <h1 class="title">Peruse For Brews</h1>
                 <br>
-                <p class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</p>
+                <h4 class="lead">It's Simple! Wherever You Are, Find Somewhere To Unwind.</h4>
                 <br>
                 <div id="container">
                     <div class="glass">
@@ -73,12 +74,14 @@
                     <div class="pour"></div>
                 </div>
                 <hr class="my-4">
-                <h6>Ready? Click Below To Allow Location Services!</h6>
-
+                <h5 id="ready">Ready? Click Below To Start Perusing!</h5>
+            </div>
+            <div id="nav">
                 <button id="start" href="#section2" role="button" class="btn btn-outline-light">Get Started</button>
 
                 <a id="learn" href="LearnMore.html" role="button" class="btn btn-outline-light">Learn
                     More</a>
+                </div>
             </div>
 
         </div>
